Tiene muchas partes funcionales, aun queda detalles por pulir. Cerca de ser V1.0 usable